# mobile-manager

./: BUGS  ChangeLog  NEWS  autogen.sh  config.h.in  config.status.lineno  configure  configure.ac  mobile-manager.spec
contrib/: Makefile.am
contrib/huawei/: Makefile.am
contrib/novatel/: Makefile.am
contrib/usb-modeswitch/: Makefile.am
data/: Makefile.am
data/autostart/: Makefile.am  Makefile.in  mobile-manager.desktop
data/dbus/: mobilemanager.conf
data/glade/: mm_devices_conf.glade  mm_devices_conf.glade.bak
data/pkg-config/: Makefile.am
data/udev-rules/: 04-mobile-manager-novatel-MC950D.rules  04-mobile-manager-novatel-MC990D.rules  Makefile.am
data/usbmodeswitch-conf/: Makefile.am  novatel-MC990D.conf
data/wvdial/: wvdial.conf
debian/: changelog  control  copyright  rules
po/: ChangeLog  POTFILES.in  es.po
src/: Makefile.am  MobileCapabilities.py  MobileController.py  MobileDevice.py  MobileDialPPP.py  MobileDialWvdial.py  MobileManagerDaemon  MobileManagerDbus.py  MobileStatus.py  __init__.py  mdpcmodule.c
src/devices/: Makefile.am  MobileDeviceBluetooth.py  MobileDeviceHuawei.py  MobileDeviceIR.py  MobileDeviceNone.py  MobileDeviceNovatel.py  MobileDeviceNozomi.py  MobileDeviceOption.py  MobileDeviceSerial.py  MobileDeviceSierra.py  MobileDeviceUSB.py  MobileDeviceZTE.py
src/messaging/: Makefile.am  pdu.py
src/mmdt/: mmdt.glade.bak  mmdt.in
src/pdu/: Makefile.am  pdu.py
src/pppmanager/: Makefile.in
src/test/: ask-pin-test.py  at-button-test.py  carrier-dialog-test.py  change-pin-test.py  manage-pin-test.py  puk-test.py
(+10 files in other folders)
