if USB_MODE_SWITCH

udevdir = $(sysconfdir)/udev/rules.d
udev_DATA = 	04-mobile-manager-huawei.rules		\
		04-mobile-manager-novatel-u630.rules  	\
		04-mobile-manager-option.rules		\
		04-mobile-manager-novatel-MC950D.rules	\
		04-mobile-manager-novatel-MC990D.rules

endif

EXTRA_DIST = 	04-mobile-manager-huawei.rules		\
		04-mobile-manager-novatel-u630.rules  	\
		04-mobile-manager-option.rules		\
		04-mobile-manager-novatel-MC950D.rules	\
		04-mobile-manager-novatel-MC990D.rules
