mobilemanagerdir = $(pythondir)/MobileManager
mobilemanager_PYTHON = 	MobileDeviceHuawei.py		\
			MobileDeviceBluetooth.py	\
			MobileDeviceOption.py		\
			MobileDeviceNozomi.py		\
			MobileDeviceNovatel.py		\
			MobileDeviceSierra.py		\
			MobileDeviceZTE.py		\
			MobileDeviceUSB.py		\
			MobileDeviceSerial.py		\
			MobileDeviceNone.py
